--- a/shadow.css
+++ b/shadow.css
@@ -315,7 +315,7 @@ article a:hover {
     margin-top: 50px;
 }
 
-/* Animação para o gradiente do background */
+/* Animação para o gradiente de background */
 @keyframes gradientAnimation {
     0% {
         background-position: 0% 50%;
@@ -328,3 +328,4 @@ article a:hover {
     }
 
 }
+
